<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkMode"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnRock"
        app:layout_constraintEnd_toStartOf="@+id/anchorCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnScissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/anchorCenter"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/anchorCenter"
        android:layout_width="1dp"
        android:layout_height="358dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRock"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/btnRock"
        app:layout_constraintEnd_toStartOf="@+id/btnPaper"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnScissors"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/btnScissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/btnPaper"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPaper"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/btnPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRules"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:text="@string/btnHelp"
        app:layout_constraintEnd_toStartOf="@+id/anchorCenter"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTotals"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:text="@string/btnTotals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toEndOf="@+id/anchorCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/freshMint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPaper" />
</androidx.constraintlayout.widget.ConstraintLayout>